--- a/DDS_Space_Invaders/Properties/Resources.resx
+++ b/DDS_Space_Invaders/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="flyingsaucer4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flyingsaucer4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="nullable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nullable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="player" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\player.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
