--- a/DDS_Space_Invaders/Properties/Resources.resx
+++ b/DDS_Space_Invaders/Properties/Resources.resx
@@ -184,4 +184,7 @@
   <data name="star4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\star4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Stars" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Stars.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
